<resources>
    <string name="app_name">BMI Calculate</string>
    <string name="peso">Peso: </string>
    <string name="altura">Altura: </string>
    <string name="hint_peso">Peso (Kg)</string>
    <string name="hint_altura">"Altura (m) "</string>
    <string name="imc">IMC: </string>
    <string name="zeros">0,0 </string>
    <string name="calcular">Calcular </string>
    <string name="limpar">Limpar </string>
    <string name="toast_cleanr_message">Campos Limpos</string>
    <string name="erro_peso">"Weight field must be filled in. Campo PESO deve ser Preenchido. "</string>
    <string name="erro_altura" >" Campo ALTURA deve ser Preenchido. "</string>
</resources>