<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_margin="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvPeso"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/peso"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etPeso"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:padding="16dp"
        android:hint="@string/hint_peso"
        android:importantForAutofill="no"
        app:layout_constraintStart_toEndOf="@+id/tvPeso"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvAltura"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/altura"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPeso" />



    <EditText
        android:id="@+id/etAltura"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:padding="16dp"
        android:hint="@string/hint_altura"
        android:importantForAutofill="no"
        app:layout_constraintStart_toEndOf="@+id/tvAltura"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etPeso" />

    <Space
        android:id="@+id/space1"
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        app:layout_constraintTop_toBottomOf="@+id/etAltura"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/tvIMC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/imc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/space1" />


    <TextView
        android:id="@+id/tvResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/zeros"
        app:layout_constraintStart_toEndOf="@+id/tvIMC"
        app:layout_constraintTop_toBottomOf="@+id/space1" />

    <Space
        android:id="@+id/space2"
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        app:layout_constraintTop_toBottomOf="@+id/tvResult"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/btCalcular"
        android:layout_width="132dp"
        android:layout_height="wrap_content"
        android:text="@string/calcular"
        app:layout_constraintStart_toEndOf="@+id/tvAltura"
        app:layout_constraintTop_toBottomOf="@+id/space2" />

    <Space
        android:id="@+id/space3"
        android:layout_width="16dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/btCalcular"
        app:layout_constraintBottom_toBottomOf="@id/btCalcular" />
        />

    <Button
        android:id="@+id/btLimpar"
        android:layout_width="132dp"
        android:layout_height="wrap_content"
        android:text="@string/limpar"
        android:backgroundTint="@color/black"
        app:layout_constraintStart_toEndOf="@+id/space3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/space2" />


</androidx.constraintlayout.widget.ConstraintLayout>